# TimeTableGenerator

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
apps/solver/: CMakeLists.txt  README.md  ScheduleSolver.slnx
apps/solver/src/: diagnostic_report.h  json_io.cpp  json_io.h  main.cpp  solver_engine.h  solver_engine_stub.cpp
apps/solver/src/ScheduleSolver.Cli/: Program.cs  ScheduleSolver.Cli.csproj
apps/solver/src/ScheduleSolver.Core/: ScheduleSolver.Core.csproj  SolverApplication.cs  SolverRunOptions.cs  SolverRunResult.cs
apps/solver/tests/ScheduleSolver.Tests/: AllowedStartResolverTests.cs  HandoffFactAttribute.cs  HandoffOutOfProcessTests.cs  InputCatalogsEdgeCaseTests.cs  ModelBudgetGuardTests.cs  ModelBuildStatsTests.cs  ModelLogicFixesTests.cs  OrToolsSmokeTests.cs  Phase2EnforcementTests.cs  Phase2Wave2Tests.cs  Phase2Wave3EnforcementTests.cs  Phase2Wave4EnforcementTests.cs  Phase2Wave6EnforcementTests.cs  Phase2bCuratedTests.cs  Phase3HandoffTests.cs  ProfileDiagnosticEdgeCaseTests.cs  RegistryEdgeCaseTests.cs  RuleRegistryTests.cs  RuleSampleMatrixTests.cs  ScheduleSolver.Tests.csproj  SlotIndexerEdgeCaseTests.cs  SlotIndexerTests.cs  SlotIndexerV11Tests.cs  SolveEdgeCaseTests.cs  SolveModeTests.cs  SolverTestHelper.cs  SolverTestPaths.cs  StressMediumSampleTests.cs  V11MappingTests.cs  ValidateModeTests.cs  ValidationEdgeCaseTests.cs
apps/solver/tools/MemoryHog/: MemoryHog.csproj  Program.cs
apps/solver/tools/ScheduleSolver.DevHost/: MemoryWatchdog.cs  Program.cs  ScheduleSolver.DevHost.csproj
data/: README.md
(+135 files in other folders)
